Upgrade Spring Boot to 3.5.13 and Spring Cloud to 2025.0.1
- Bump Spring Boot from 3.2.4 to 3.5.13
- Bump Spring Cloud from 2023.0.5 to 2025.0.1 (compatible with Boot 3.5.x)
- Remove commons-io dependency from FeignErrorDecoder, use
  InputStream.readAllBytes() instead (commons-io is no longer a
  transitive dependency of Spring Cloud 2025.0.x)
- Fix duplicate WireMock stub mapping IDs that caused
  InvalidInputException with newer WireMock versions